fix(icon): medium size is fixed because it was too big for medium

--- a/src/components/ui/Icon/Icon.module.scss
+++ b/src/components/ui/Icon/Icon.module.scss
@@ -8,7 +8,7 @@
 }
 
 .medium {
-  width: clamp(2rem, 3vw, 4rem);
+  width: clamp(1.5rem, 2vw, 2rem);
 }
 
 .large {
